--- a/app/views/calculation/results.html.erb
+++ b/app/views/calculation/results.html.erb
@@ -1,13 +1,39 @@
+<!-- NAV -->
+  <nav class="navbar navbar-inverse" role="navigation">
+    <div class="container-fluid">
+<!-- Brand & Toggle grouped for mobile device -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <%= link_to "Cable Blade", root_path, class: "navbar-brand" %>
+      </div>
+<!-- Collect nav links for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><%= link_to "Home", root_path %></li>
+          <li><%= link_to "About", about_path %></li>
+          <li><%= link_to "Contact", contact_path %></li>
+        </ul>
+      </div><!-- navbar-collapse -->
+    </div><!-- container-fluid -->
+  </nav>
+<!-- END NAV -->
+
 <h1>Results</h1>
 
 <% @purchases.each do |service, shows| %>
-  <p>Use <%= Show::SERVICE_DISPLAY_NAMES[service] %> to watch
+  <p>Use <%= Show::SERVICE_DISPLAY_NAMES[service] %> to watch:
 	<%= shows.map { |s| "\"#{s.name}\"" }.to_sentence %>.</p>
 <% end %>
 
-Your Total Cost: <%= number_to_currency(@total_cost) %>
+Your Total Cost: <%= number_to_currency(@total_cost) %> per month
 
 <% if @unavailable.present? %>
   <p><%= @unavailable.map { |s| "\"#{s.name}\"" }.to_sentence %>
-	<%= 'is'.pluralize(@unavailable.length) %> unavailable online.</p>
+	<%= 'is'.pluralize(@unavailable.length) %> not available online.</p>
 <% end %>
+<p><%= link_to 'Start over', networks_path, class: "btn btn-primary", style: "color:white;" %></p>
