--- a/app/views/networks/index.html.erb
+++ b/app/views/networks/index.html.erb
@@ -1,5 +1,30 @@
-<h1>Select your Channels</h1>
-<p>Choose the Channels that you watch, then click submit.  Keep in mind that sister channels, such as Disney XD, History2, Nick Jr, etc. have been grouped under the main channel name.  For example if you watch Disney XD, you would choose Disney.</p>
+<!-- NAV -->
+  <nav class="navbar navbar-inverse" role="navigation">
+    <div class="container-fluid">
+<!-- Brand & Toggle grouped for mobile device -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <%= link_to "Cable Blade", root_path, class: "navbar-brand" %>
+      </div>
+<!-- Collect nav links for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><%= link_to "Home", root_path %></li>
+          <li><%= link_to "About", about_path %></li>
+          <li><%= link_to "Contact", contact_path %></li>
+        </ul>
+      </div><!-- navbar-collapse -->
+    </div><!-- container-fluid -->
+  </nav>
+<!-- END NAV -->
+
+<h1>Select Channels</h1>
+<p>Choose the channels that you watch, then click next.<br> Keep in mind that sister channels, such as Disney XD, History2, Nick Jr, etc. have been grouped under the main channel name.<br>  For example if you watch Disney XD, you would choose Disney.</p>
 
 <%= form_tag(shows_path, method: 'get') do %>
   <% @networks.each do |network| %>
@@ -11,5 +36,5 @@
 	  </div>
   <% end %>
 
-  <div class="col-xs-12"><input type="submit" value="Next"></div>
+  <div class="col-xs-12"><input type="submit" value="Next" class="btn btn-primary btn-lg"></div>
 <% end %>
