--- a/app/views/shows/index.html.erb
+++ b/app/views/shows/index.html.erb
@@ -1,15 +1,40 @@
-<h1>Select your Shows</h1>
-<p>Now pick the shows that you watch, when you are finished click submit.</p>
+<!-- NAV -->
+  <nav class="navbar navbar-inverse" role="navigation">
+    <div class="container-fluid">
+<!-- Brand & Toggle grouped for mobile device -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <%= link_to "Cable Blade", root_path, class: "navbar-brand" %>
+      </div>
+<!-- Collect nav links for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><%= link_to "Home", root_path %></li>
+          <li><%= link_to "About", about_path %></li>
+          <li><%= link_to "Contact", contact_path %></li>
+        </ul>
+      </div><!-- navbar-collapse -->
+    </div><!-- container-fluid -->
+  </nav>
+<!-- END NAV -->
+
+<h1>Select Shows</h1>
+<p>Now pick the shows that you watch, when you are finished click next.</p>
 
 <%= form_tag(results_path, method: 'get') do %>
   <% @shows.each do |show| %>
-    <div class="col-xs-12 col-md-6">
+    <div class="col-xs-12 col-md-12">
       <label>
         <%= check_box_tag('shows[]', show.id) %>
-        <%= show.name %>
+        <%= show.name %> -
         <%= show.network.name %>
       </label>
     </div>
   <% end %>
-  <div class="col-xs-12"><input type="submit" value="Next"></div>
+  <div class="col-xs-12"><input type="submit" value="Next" class="btn btn-primary btn-lg"></div>
 <% end %>
